--- a/Clash/config/ACL4SSR_Online_Full_mmhws.ini
+++ b/Clash/config/ACL4SSR_Online_Full_mmhws.ini
@@ -15,7 +15,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/mmhws/ACL4SSR/master/Clash/Mine_BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🇺🇲 美国节点,https://raw.githubusercontent.com/mmhws/ACL4SSR/master/Clash/MineSingapore.list
+ruleset=🇸🇬 狮城节点,https://raw.githubusercontent.com/mmhws/ACL4SSR/master/Clash/MineSingapore.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
